docusaurus/angular_versioned_docs/version-5/services/AttachmentService.mdx
# AttachmentService

The `AttachmentService` manages the uploads of a message input.

You can read more about [uploads](https://getstream.io/chat/docs/javascript/file_uploads/?language=javascript&q=size) in the Stream API documentation. You can use Stream's API or the dashboard to customize the [file](https://getstream.io/chat/docs/javascript/app_setting_overview/?language=javascript&q=size#file-uploads) and [image upload](https://getstream.io/chat/docs/javascript/app_setting_overview/?language=javascript&q=size#image-uploads) configuration.

## Type parameters

| Name | Type |
| :------ | :------ |
| `T` | extends `DefaultStreamChatGenerics` = `DefaultStreamChatGenerics` |

## Properties

### attachmentUploadInProgressCounter$

• **attachmentUploadInProgressCounter$**: `Observable`\<`number`\>

Emits the number of uploads in progress.

#### Defined in

[projects/stream-chat-angular/src/lib/attachment.service.ts:25](https://github.com/GetStream/stream-chat-angular/blob/7e3f15aabf22a96017dafb45638593c3ba69fb64/projects/stream-chat-angular/src/lib/attachment.service.ts#L25)

___

### attachmentUploads$

• **attachmentUploads$**: `Observable`\<`AttachmentUpload`\<`DefaultStreamChatGenerics`\>[]\>

Emits the state of the uploads ([`AttachmentUpload[]`](https://github.com/GetStream/stream-chat-angular/blob/master/projects/stream-chat-angular/src/lib/types.ts)), it adds a state (`success`, `error` or `uploading`) to each file the user selects for upload. It is used by the [`AttachmentPreviewList`](../components/AttachmentPreviewListComponent.mdx) to display the attachment previews.

#### Defined in

[projects/stream-chat-angular/src/lib/attachment.service.ts:29](https://github.com/GetStream/stream-chat-angular/blob/7e3f15aabf22a96017dafb45638593c3ba69fb64/projects/stream-chat-angular/src/lib/attachment.service.ts#L29)

## Methods

### addAttachment

▸ **addAttachment**(`attachment`): `void`

You can add custom `image`, `video` and `file` attachments using this method.

Note: If you just want to use your own CDN for file uploads, you don't necessary need this method, you can just specify you own upload function in the [`ChannelService`](./ChannelService.mdx)

#### Parameters

| Name | Type |
| :------ | :------ |
| `attachment` | `Attachment`\<`T`\> |

#### Returns

`void`

#### Defined in

[projects/stream-chat-angular/src/lib/attachment.service.ts:120](https://github.com/GetStream/stream-chat-angular/blob/7e3f15aabf22a96017dafb45638593c3ba69fb64/projects/stream-chat-angular/src/lib/attachment.service.ts#L120)

___

### createFromAttachments

▸ **createFromAttachments**(`attachments`): `void`

Maps attachments received from the Stream API to uploads. This is useful when editing a message.

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `attachments` | `Attachment`\<`T`\>[] | Attachemnts received with the message |

#### Returns

`void`

#### Defined in

[projects/stream-chat-angular/src/lib/attachment.service.ts:206](https://github.com/GetStream/stream-chat-angular/blob/7e3f15aabf22a96017dafb45638593c3ba69fb64/projects/stream-chat-angular/src/lib/attachment.service.ts#L206)

___

### deleteAttachment

▸ **deleteAttachment**(`upload`): `Promise`\<`void`\>

Deletes an attachment, the attachment can have any state (`error`, `uploading` or `success`).

#### Parameters

| Name | Type |
| :------ | :------ |
| `upload` | `AttachmentUpload`\<`DefaultStreamChatGenerics`\> |

#### Returns

`Promise`\<`void`\>

#### Defined in

[projects/stream-chat-angular/src/lib/attachment.service.ts:145](https://github.com/GetStream/stream-chat-angular/blob/7e3f15aabf22a96017dafb45638593c3ba69fb64/projects/stream-chat-angular/src/lib/attachment.service.ts#L145)

___

### filesSelected

▸ **filesSelected**(`fileList`): `Promise`\<`undefined` \| `boolean`\>

Uploads the selected files, and creates preview for image files. The result is propagated throught the `attachmentUploads$` stream.

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `fileList` | ``null`` \| `File`[] \| `FileList` | The files selected by the user, if you have Blobs instead of Files, you can convert them with this method: https://developer.mozilla.org/en-US/docs/Web/API/File/File |

#### Returns

`Promise`\<`undefined` \| `boolean`\>

A promise with true or false. If false is returned the upload was canceled because of a client side error. The error is emitted via the `NotificationService`.

#### Defined in

[projects/stream-chat-angular/src/lib/attachment.service.ts:62](https://github.com/GetStream/stream-chat-angular/blob/7e3f15aabf22a96017dafb45638593c3ba69fb64/projects/stream-chat-angular/src/lib/attachment.service.ts#L62)

___

### mapToAttachments

▸ **mapToAttachments**(): `Attachment`\<`DefaultGenerics`\>[]

Maps the current uploads to a format that can be sent along with the message to the Stream API.

#### Returns

`Attachment`\<`DefaultGenerics`\>[]

the attachments

#### Defined in

[projects/stream-chat-angular/src/lib/attachment.service.ts:175](https://github.com/GetStream/stream-chat-angular/blob/7e3f15aabf22a96017dafb45638593c3ba69fb64/projects/stream-chat-angular/src/lib/attachment.service.ts#L175)

___

### resetAttachmentUploads

▸ **resetAttachmentUploads**(): `void`

Resets the attachments uploads (for example after the message with the attachments sent successfully)

#### Returns

`void`

#### Defined in

[projects/stream-chat-angular/src/lib/attachment.service.ts:53](https://github.com/GetStream/stream-chat-angular/blob/7e3f15aabf22a96017dafb45638593c3ba69fb64/projects/stream-chat-angular/src/lib/attachment.service.ts#L53)

___

### retryAttachmentUpload

▸ **retryAttachmentUpload**(`file`): `Promise`\<`void`\>

Retries to upload an attachment.

#### Parameters

| Name | Type |
| :------ | :------ |
| `file` | `File` |

#### Returns

`Promise`\<`void`\>

A promise with the result

#### Defined in

[projects/stream-chat-angular/src/lib/attachment.service.ts:130](https://github.com/GetStream/stream-chat-angular/blob/7e3f15aabf22a96017dafb45638593c3ba69fb64/projects/stream-chat-angular/src/lib/attachment.service.ts#L130)
